[package]
name = "tsdb"
description = "Parse Prometheus tsdb files"
version = "0.3.1"
authors = ["Matthias Krull"]
repository = "https://github.com/mkrull/tsdb-poc"
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
unsigned-varint = "0.7"
crc = "2.1"
memmap = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
clap = { version = "3.1.2", features = [ "derive" ] }

[profile.release]
debug = true
